feat: add message ID to response
