# docs/swagger.json
@@ -740,6 +740,10 @@
                     "description": "ID of the message sender in UUIDv4 format.",
                     "type": "string"
                 },
+                "messageId": {
+                    "description": "ID of the message.",
+                    "type": "integer"
+                },
                 "text": {
                     "description": "Content of the message.",
                     "type": "string"
